packages/sdk/jest_log_utf8.txt

> @rateforge/sdk@0.1.0 test
> jest --config ../../jest.config.base.js --passWithNoTests

node.exe : FAIL src/index.test.ts
At C:\Users\2k22c\AppData\Roaming\npm\npm.ps1:24 char:5
+     & "node$exe"  
"$basedir/node_modules/npm/bin/npm-cli.js" $args
+     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (FAIL src/ 
   index.test.ts:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
  ΓùÅ Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. 
when your code or its dependencies use non-standard 
JavaScript syntax, or when Jest is not configured to 
support such syntax.

    Out of the box Jest supports Babel, which will be 
used to transform your files into valid JS based on 
your Babel configuration.

    By default "node_modules" folder is ignored by 
transformers.

    Here's what you can do:
     ΓÇó If you are trying to use ECMAScript Modules, 
see https://jestjs.io/docs/ecmascript-modules for how 
to enable it.
     ΓÇó If you are trying to use TypeScript, see 
https://jestjs.io/docs/getting-started#using-typescript
     ΓÇó To have some of your "node_modules" files 
transformed, you can specify a custom 
"transformIgnorePatterns" in your config.
     ΓÇó If you need a custom transformation specify a 
"transform" option in your config.
     ΓÇó If you simply want to mock your non-JS 
modules (e.g. binary assets) you can stub them out 
with the "moduleNameMapper" config option.

    You'll find more details and examples of these 
config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\2k22c\Desktop\PlacmentProjects\RateForge\n
ode_modules\.pnpm\until-async@3.0.2\node_modules\until-
async\lib\index.js:23
    export { until };
    ^^^^^^

    SyntaxError: Unexpected token 'export'

    [0m[31m[1m>[22m[39m[90m 1 |[39m 
[36mimport[39m { http[33m,[39m 
[33mHttpResponse[39m[33m,[39m delay } 
[36mfrom[39m [32m'msw'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 2 |[39m [36mimport[39m { setupServer } 
[36mfrom[39m [32m'msw/node'[39m[33m;[39m
     [90m 3 |[39m [36mimport[39m { 
[33mRateForgeClient[39m } [36mfrom[39m 
[32m'./index'[39m[33m;[39m
     [90m 4 |[39m [36mimport[39m { 
[33mAlgorithmType[39m[33m,[39m 
[33mRateLimitRequest[39m } [36mfrom[39m 
[32m'@rateforge/types'[39m[33m;[39m[0m

      at Runtime.createScriptFromCode (../../../../../n
ode_modules/jest-runtime/build/index.js:1505:14)
      at Object.<anonymous> (../../node_modules/.pnpm/m
sw@2.12.13_@types+node@20.19.37_typescript@5.9.3/node_m
odules/msw/src/core/utils/handleRequest.ts:1:23)
      at Object.<anonymous> (../../node_modules/.pnpm/m
sw@2.12.13_@types+node@20.19.37_typescript@5.9.3/node_m
odules/msw/src/core/index.ts:37:58)
      at Object.<anonymous> (src/index.test.ts:1:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        4.538 s
Ran all test suites.
npm error Lifecycle script `test` failed with error:
npm error code 1
npm error path C:\Users\2k22c\Desktop\PlacmentProjects\
RateForge\packages\sdk
npm error workspace @rateforge/sdk@0.1.0
npm error location C:\Users\2k22c\Desktop\PlacmentProje
cts\RateForge\packages\sdk
npm error command failed
npm error command C:\WINDOWS\system32\cmd.exe /d /s /c 
jest --config ../../jest.config.base.js 
--passWithNoTests
